# SimpleHTTPServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  user.cpp  user.h
html/: error.html  login.html  register.html  room.html  roomlist.html  success.html
src/: main.cpp  mymemorypool.h  myserver.cpp  myserver.h  replica.cpp  room.cpp  room.h  roomhandler.h  timequeue.cpp  timequeue.h  user.cpp  user.h
